# gofer.rs

./: CHANGES.md  Cargo.toml  README.md
.github/workflows/: ci.yaml
lib/gofer/: Cargo.toml
lib/gofer/examples/: git.rs  ipfs.rs
lib/gofer/examples/cat/: main.rs
lib/gofer/src/: error.rs  features.rs  lib.rs  open.rs  schemes.rs
lib/gofer/src/schemes/: data.rs  file.rs  ftp.rs  git.rs  http.rs  ipfs.rs  request.rs  scp.rs  stdin.rs  utils.rs
