[package]
name = "gofer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
std = [
    "data-url?/std",
    "dogma/std",
    "percent-encoding?/std",
    "thiserror/std",
    "url/std",
]
all = ["data", "file", "ftp", "http", "https", "stdin"]
data = ["dep:data-url"]
file = ["std"]
ftp = ["dep:percent-encoding", "dep:suppaftp"]
ftps = ["ftp", "suppaftp?/rustls"]
git = ["dep:gix-protocol"]
miette = ["dep:miette"]
http = ["dep:reqwest", "reqwest?/blocking"]
https = ["http", "reqwest?/default", "reqwest?/rustls-tls-native-roots"]
scp = ["dep:ssh2"]
stdin = ["std"]
unstable = ["ftps", "git", "scp"]

[dev-dependencies]

[dependencies]
data-url = { version = "0.3", default-features = false, features = [
    "alloc",
], optional = true }
dogma = { version = "0.1", default-features = false }
gix-protocol = { version = "0.49", default-features = false, features = [
    "blocking-client",
], optional = true }
miette = { version = "7.5", optional = true }
percent-encoding = { version = "2.3", default-features = false, optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }
ssh2 = { version = "0.9", default-features = false, features = [
    "vendored-openssl",
], optional = true }
suppaftp = { version = "6", default-features = false, optional = true }
thiserror = { version = "2", default-features = false }
url = { version = "2.5", default-features = false }
