[package]
name = "gofer"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
#documentation.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[features]
default = ["all", "std"]
std = [
    "clap?/std",
    "data-url?/std",
    "dogma/std",
    "percent-encoding?/std",
    "thiserror/std",
]
all = ["data", "file", "ftp", "git", "http", "https", "ipfs", "stdin"]
unstable = ["ftps", "scp"]

# Protocols:
data = ["dep:data-url"]
file = ["std"]
ftp = ["dep:percent-encoding", "dep:suppaftp"]
ftps = ["ftp", "suppaftp?/rustls"]
git = ["dep:reqwest", "reqwest?/blocking"]
http = ["dep:reqwest", "reqwest?/blocking"]
https = ["http", "reqwest?/default", "reqwest?/rustls-tls-native-roots"]
ipfs = ["dep:reqwest", "reqwest?/blocking"]
scp = ["dep:ssh2"]
stdin = ["std"]

# Integrations:
clap = ["dep:clap"]
miette = ["dep:miette"]

[dev-dependencies]

[dependencies]
clap = { version = "4.5", default-features = false, features = [
    "derive",
    "help",
], optional = true }
data-url = { version = "0.3", default-features = false, features = [
    "alloc",
], optional = true }
dogma = { version = "0.1.5", default-features = false, features = [
    "iri",
    "uri",
] }
miette = { version = "7.5", default-features = false, features = [
    "derive",
], optional = true }
percent-encoding = { version = "2.3", default-features = false, optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }
ssh2 = { version = "0.9", default-features = false, features = [
    "vendored-openssl",
], optional = true }
suppaftp = { version = "6", default-features = false, optional = true }
thiserror = { version = "2", default-features = false }
